Updated month number in trading post.

--- a/_posts/2017-09-09-trading.markdown
+++ b/_posts/2017-09-09-trading.markdown
@@ -13,7 +13,7 @@ author: Lin Gao
 externalLink: false
 ---
 
-Seven month in trading is not long enough to get one familar with every complicated instruments, equations and strategies, but definitely some best and worst sides of it.
+Ten months in trading is not long enough to get one familar with every complicated instruments, equations and strategies, but definitely some best and worst sides of it.
 
 Aside from the attemptation of financial freedom, I came for challenging tasks and real impacts, both I found in Bluewater. The tasks are challenging in some unexpected way though, mainly because people don't want to communicate. It is natural that one want to keep his/her secret to themselves, but most people end up just too busy to hand pick gold, if they are lucky enough to look at the right place. There is no time for the invention of advanced tools, machines that could be orders more powerful, or it is simply too difficult for a small team. 
 
