Some updates on trading post.

--- a/_posts/2017-09-09-trading.markdown
+++ b/_posts/2017-09-09-trading.markdown
@@ -15,9 +15,9 @@ externalLink: false
 
 Ten months in trading is not long enough to get one familar with every complicated instruments, equations and strategies, but definitely some best and worst sides of it.
 
-Aside from the attemptation of financial freedom, I came for challenging tasks and real impacts, both I found in Bluewater. The tasks are challenging in some unexpected way though, mainly because people don't want to communicate. It is natural that one want to keep his/her secret to themselves, but most people end up just too busy to hand pick gold, if they are lucky enough to look at the right place. There is no time for the invention of advanced tools, machines that could be orders more powerful, or it is simply too difficult for a small team. 
+Aside from the attemptation of financial freedom, I came for challenging tasks and real impacts, both I found in Bluewater. The tasks are sometimes challenging in unexpected way though, mainly because people don't want to communicate. It is natural that one want to keep his/her secret to themselves, but most people end up just too busy to hand pick gold from desert, if they are lucky enough to look at the right place. There is no time for the invention of advanced tools, machines that could be orders more powerful, or it is simply too difficult for small teams. 
 
-Financial market is fair, everyone play the same game. Doesn't matter what strategy you are using, it all boil down to buy and sell and everyone is measured by the same metrics. Although no longer working full time in trading and all what I have are hands and shovels, at least I know where to look at. 
+Financial market is fair. Doesn't matter what strategy you are using, it all boil down to buy and sell and everyone is measured by the same metric: profit. It is also a long term game, even the best spent years before being recognized. With cryptocurrency becoming more main-stream in a very unusual financial environment, opportunities for newcomers might be at its best.  
 
 ---
 
