--- a/_posts/2017-09-09-trading.markdown
+++ b/_posts/2017-09-09-trading.markdown
@@ -17,7 +17,7 @@ Ten months in trading is not long enough to get one familar with every complicat
 
 Aside from the attemptation of financial freedom, I came for challenging tasks and real impacts, both I found in Bluewater. The tasks are sometimes challenging in unexpected way though, mainly because people don't want to communicate. It is natural that one want to keep his/her secret to themselves, but most people end up just too busy to hand pick gold from desert, if they are lucky enough to look at the right place. There is no time for the invention of advanced tools, machines that could be orders more powerful, or it is simply too difficult for small teams. 
 
-Financial market is fair. Doesn't matter what strategy you are using, it all boil down to buy and sell and everyone is measured by the same metric: profit. It is also a long term game, even the best spent years before being recognized. With cryptocurrency becoming more main-stream in a very unusual financial environment, opportunities for newcomers might be at its best.  
+Financial market is fair. Doesn't matter what strategy you are using, it all boil down to buy and sell and everyone is measured by the same metric: profit. It is also a long term game, even the best spent years before being recognized. With cryptocurrency becoming more mainstream in a very unusual financial environment, opportunities for newcomers might be at its best.  
 
 ---
 
