Updated the postes.

--- a/_posts/2017-09-09-phd.markdown
+++ b/_posts/2017-09-09-phd.markdown
@@ -17,9 +17,9 @@ Before we dive into the details on how great is the algorithm I developed in [Pr
  
 [Differential equations](https://en.wikipedia.org/wiki/Differential_equation): very common type of governing equation for mathematical and physical systems, take the form of Partial Differential Equations ([PDE](https://en.wikipedia.org/wiki/Partial_differential_equation)) or Ordinary Differential Equations ([ODE](https://en.wikipedia.org/wiki/Ordinary_differential_equation)). In fluid dynamics they may take the form of Navier–Stokes equations, in economics it may be the Black–Scholes equation, etc.
 
- [Stochastic](https://en.wikipedia.org/wiki/Stochastic): fancy ways to say random. A stochastic differential equation typically has random excitation and possibly random boundary conditions, initial conditions and/or coefficients. Stochastic differential equations are more realistic modeling of systems: think of the fuselage under air pressure that can only be estimated to a range, or the constantly changing volatility in the Black-Scholes equation. Stochastic differential equations are harder to solve, of course, compare to their deterministic counter-parties. My work is to deal with those already-hard-to-solve differential equations, in its more challenging stochastic form. We are talking about millions of degree-of-freedom here, so typically curse-of-dimensionality kicks in and needless to say, Monte Carlo is too slow to be useful. The AAPG scheme I developed would decouple the original high-dimensional stochastic system into smaller, independent low-dimensional deterministic systems that can be solved in parallel.  
+ [Stochastic](https://en.wikipedia.org/wiki/Stochastic): fancy ways to say random. A stochastic differential equation typically has random excitation and possibly random boundary conditions, initial conditions and/or coefficients. Stochastic differential equations are more realistic modeling of systems: think about the fuselage under air pressure that can only be estimated to a range, or the constantly changing volatility in the Black-Scholes equation. Stochastic differential equations are harder to solve compare to their deterministic counter-parties. My work is to deal with those already-hard-to-solve differential equations, in its more challenging stochastic form. For large systems with millions of degrees-of-freedom, curse-of-dimensionality kicks in and Monte Carlo is too slow to be useful. The AAPG scheme I developed would decouple the original high-dimensional stochastic system into smaller, independent low-dimensional deterministic systems that can be solved in parallel.  
 
- [Linear differential equations](https://en.wikipedia.org/wiki/Linear_differential_equation): the easier ones (compare to non-linear differential equations) to solve. In fact, one would be happy to handle single degree-of-freedom stochastic non-linear differential equations. Realistic systems with millions of degree-of-freedom would be mission impossible. The AAPG scheme I worked on offers the potential to tackle such stochastic non-linear differential equations efficiently.  
+ [Linear differential equations](https://en.wikipedia.org/wiki/Linear_differential_equation): the easier ones (compare to non-linear differential equations) to solve. In fact, one would be happy to handle single degree-of-freedom stochastic non-linear differential equations. Realistic systems with millions of degree-of-freedom is considered mission impossible. The AAPG scheme offers the potential to tackle large stochastic non-linear differential equations efficiently.  
 
 The details of AAPG scheme is best summarized in this paper:
 > **Lin Gao**, Christophe Audouze, Prasanth B. Nair (2015) Anchored analysis of variance Petrov-Galerkin projection schemes for linear stochastic structural dynamics. [Proc. R. Soc. A 471(2182)](http://rspa.royalsocietypublishing.org/content/471/2182/20150023) [PDF](https://gauss1986.github.io/assets/RSPA_LinGao.pdf)
