--- a/_posts/2017-09-09-trading.markdown
+++ b/_posts/2017-09-09-trading.markdown
@@ -7,7 +7,7 @@ image: https://koppl.in/indigo/assets/images/jekyll-logo-light-solid.png
 headerImage: false
 projects: true
 hidden: false # don't count this post in blog pagination
-description: "Lin's PhD research topic"
+description: "Lin's trading experience"
 category: project
 author: Lin Gao
 externalLink: false
